--- a/sass/components/_burgermodal.scss
+++ b/sass/components/_burgermodal.scss
@@ -33,18 +33,20 @@
   }
 }
 .menu-container {
-  overflow: hidden;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 480px;
-  height: 796px;
+  min-height: 796px;
   padding: 32px;
   background-color: white;
   z-index: 999;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
+  box-shadow: 0px 1px 1px rgb(0 0 0 / 12%), 0px 4px 4px rgb(0 0 0 / 6%),
+    1px 4px 6px rgb(0 0 0 / 16%);
 }
+
 .menu-container.is-open {
   transform: translateX(0);
 }
@@ -52,6 +54,11 @@
   position: absolute;
   top: 16px;
   right: 16px;
+}
+.menu.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
 .navigation-menu {
   margin-bottom: 302px;
@@ -113,4 +120,16 @@
 }
 .contacts-menu {
   margin-bottom: 64px;
+}
+.social-menu__item:not(:last-child):after {
+  content: "";
+  /* position: absolute; */
+  display: inline-block;
+  height: 22px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  margin-left: 10px;
+}
+.social-menu__link {
+  color: #757575;
+  text-decoration: none;
 }
