--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -21,6 +21,7 @@
 }
 
 .container-contacts {
+  position: relative;
   @media screen and (min-width: 768px) {
     display: flex;
     align-items: center;
