--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  height: 100%;
 }
 
 @media screen and (min-width: 480px) {
@@ -76,23 +77,29 @@ p {
 }
 
 .img,
-.team-images .box-gallery__images {
+.team-images,
+.box-gallery__images {
   display: block;
   width: 100%;
   height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .page-header {
   border-bottom: 1px solid #ececec;
   height: 60px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 @media screen and (min-width: 768px) {
   .page-header {
     height: 80px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container.container-contacts {
+    width: 100%;
   }
 }
 
@@ -115,6 +122,11 @@ p {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+}
+
+.container-contacts {
+  position: relative;
+  width: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -373,26 +385,33 @@ p {
 }
 
 .menu-container {
-  overflow: hidden;
   position: fixed;
   top: 0;
-  left: 0;
-  width: 480px;
-  height: 796px;
+  right: -100%;
+  width: 100%;
+  height: 100%;
   padding: 32px;
+  overflow-y: scroll;
   background-color: white;
   z-index: 999;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
-  -webkit-transition: -webkit-transform 250ms ease-in-out;
-  transition: -webkit-transform 250ms ease-in-out;
-  transition: transform 250ms ease-in-out;
-  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-transition: right 250ms ease-in-out;
+  transition: right 250ms ease-in-out;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .menu-container.is-open {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+  right: 0;
 }
 
 .menu-container .menu-toggle {
@@ -401,8 +420,21 @@ p {
   right: 16px;
 }
 
+.menu.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
 .navigation-menu {
-  margin-bottom: 302px;
+  margin-bottom: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .navigation-menu__item {
@@ -447,10 +479,16 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  width: 100%;
 }
 
 .social-menu__item:not(:last-child) {
-  margin-right: 20px;
+  padding-right: 1%;
+  margin-right: 1%;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .social-menu__link {
@@ -473,11 +511,19 @@ p {
 .hero {
   background-color: #2f303a;
   text-align: center;
-  padding: 200px 0;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/background.jpg);
-  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.jpg);
+  padding: 118px 60px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/header1x.jpg);
+  background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header1x.jpg);
   background-size: cover;
   background-position: center;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    padding: 200px 0;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/header2x.jpg);
+    background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header2x.jpg);
+  }
 }
 
 .hero__title {
@@ -1188,12 +1234,6 @@ p {
   }
 }
 
-.client-container__item:not(:last-child) {
-  /* @media screen and (max-width: 1200px) {
-      margin-bottom: 30px;
-    } */
-}
-
 @media screen and (min-width: 480px) {
   .client-container__item:not(:last-child) {
     margin-bottom: 30px;
@@ -1604,29 +1644,11 @@ p {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) and (min-width: 1200px) {
-  .portfolio-list {
-    background: #ffffff;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    margin-right: 30px;
-    margin-bottom: 30px;
-  }
-  .portfolio-list:nth-child(3n) {
-    margin-right: 0;
-  }
-  .portfolio-list:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .portfolio-list {
-    background: #ffffff;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    margin-right: 30px;
-    margin-bottom: 30px;
+    -ms-flex-preferred-size: calc((100% - 8 * 15px) / 3);
+        flex-basis: calc((100% - 8 * 15px) / 3);
+    margin: 15px;
   }
   .portfolio-list:nth-child(3n) {
     margin-right: 0;
