--- a/sass/components/_burgermodal.scss
+++ b/sass/components/_burgermodal.scss
@@ -35,21 +35,23 @@
 .menu-container {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100vw;
-  min-height: 100vw;
+  right: -100%;
+  width: 100%;
+  height: 100%;
   padding: 32px;
   overflow-y: scroll;
   background-color: white;
   z-index: 999;
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
-  box-shadow: 0px 1px 1px rgb(0 0 0 / 12%), 0px 4px 4px rgb(0 0 0 / 6%),
-    1px 4px 6px rgb(0 0 0 / 16%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: right 250ms ease-in-out;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .menu-container.is-open {
-  transform: translateX(0);
+  right: 0;
 }
 .menu-container .menu-toggle {
   position: absolute;
@@ -62,7 +64,9 @@
   pointer-events: none;
 }
 .navigation-menu {
-  margin-bottom: 302px;
+  margin-bottom: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .navigation-menu__item {
@@ -102,10 +106,14 @@
 }
 .social-menu {
   display: flex;
+  align-items: flex-end;
+  width: 100%;
 }
 .social-menu__item {
   &:not(:last-child) {
-    margin-right: 20px;
+    padding-right: 1%;
+    margin-right: 1%;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
   }
 }
 .social-menu__link {
@@ -121,11 +129,4 @@
 }
 .contacts-menu {
   margin-bottom: 64px;
-}
-.social-menu__item:not(:last-child):after {
-  content: "";
-  display: inline-block;
-  height: 22px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  margin-left: 10px;
 }
