--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -11,7 +11,8 @@ body {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  width: 100%;
+  height: 100%;
+
   @media screen and (min-width: 480px) {
     width: 480px;
   }
