--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -7,17 +7,17 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../images/header1x.jpg);
+    url(../images/header1x.jpg);
   background-size: cover;
   background-position: center;
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 768px) {
     padding: 200px 0;
     background-image: linear-gradient(
         to bottom,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/Header2x.jpg);
+      url(../images/header2x.jpg);
   }
 }
 
