--- a/sass/components/_portfoliocards.scss
+++ b/sass/components/_portfoliocards.scss
@@ -19,26 +19,10 @@
     &:last-child {
       margin-right: auto;
     }
-    @media screen and (min-width: 1200px) {
-      background: $second-color-white;
-      box-sizing: border-box;
-      margin-right: 30px;
-      margin-bottom: 30px;
-
-      &:nth-child(3n) {
-        margin-right: 0;
-      }
-
-      &:nth-last-child(-n + 3) {
-        margin-bottom: 0;
-      }
-    }
   }
   @media screen and (min-width: 1200px) {
-    background: $second-color-white;
-    box-sizing: border-box;
-    margin-right: 30px;
-    margin-bottom: 30px;
+    flex-basis: calc((100% - 8 * 15px) / 3);
+    margin: 15px;
 
     &:nth-child(3n) {
       margin-right: 0;
