--- a/css/main.css
+++ b/css/main.css
@@ -518,7 +518,7 @@ p {
   background-position: center;
 }
 
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) {
   .hero {
     padding: 200px 0;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/header2x.jpg);
@@ -526,15 +526,6 @@ p {
   }
 }
 
-/*  @media screen and (min-width: 768px) {
-    padding: 200px 0;
-    background-image: linear-gradient(
-        to bottom,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(../images/header2x.jpg);
-  } */
 .hero__title {
   color: #ffffff;
   font-weight: 900;
