--- a/css/main.css
+++ b/css/main.css
@@ -529,6 +529,7 @@ p {
 
 @media screen and (min-width: 768px) {
   .hero {
+    padding: 200px 0;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/header2x.jpg);
     background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header2x.jpg);
     background-size: cover;
