--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -24,6 +24,7 @@
     background-position: center;
   }
   @media screen and (min-width: 768px) {
+    padding: 200px 0;
     background-image: linear-gradient(
         to bottom,
         rgba(47, 48, 58, 0.4),
