--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -38,7 +38,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../images/headermobile2x.jpg);
+        url(../images/backgrounddekstop2x.jpg);
     }
   }
   @media screen and (min-width: 1200px) {
